--- a/1-eventimp/eventimp/app/views/static_pages/home.html.erb
+++ b/1-eventimp/eventimp/app/views/static_pages/home.html.erb
@@ -5,10 +5,10 @@
 <div class="center jumbotron">
   <h1>Event Imp</h1>
   <h2>
-    This is the home page for 
+    This is the home page for
     <a href="#"/>Event Imp</a>
     - an online social calendar.
   </h2>
-  
-  <%= link_to "Sign up!", '#', class: "btn btn-lg btn-primary" %>
+
+  <%= link_to "Sign up!", 'signup_path', class: "btn btn-lg btn-primary" %>
 </div>
